--- a/azure-pipelines-myBDdocker-vm-acr.yml
+++ b/azure-pipelines-myBDdocker-vm-acr.yml
@@ -4,11 +4,11 @@ trigger:
       - main
 
 variables:
-  VM_IP_PUBLICA: '52.232.193.173'  # Se debe colocar la IP pública de tu máquina virtual
+  VM_IP_PUBLICA: '20.36.195.90'  # Se debe colocar la IP pública de tu máquina virtual
   IMAGE_NAME: 'mybdmysql'  # Se debe colocar el Nombre de la imagen que será descargada desde ACR
-  ACR_NAME: 'mybdmysql'  # Se debe colocar el Nombre de tu Azure Container Registry (ACR)
-  ACR_USERNAME: 'mybdmysql'  # Se debe colocar el Nombre de usuario del ACR
-  ACR_PASSWORD: '2JmH5lwFGKFaiHeIvhQhmv15Ln0nh6FiLTYj1vyiOk+ACRAY88Wx'  # Se debe colocar la Contraseña del ACR
+  ACR_NAME: 'contenedorsumativa3'  # Se debe colocar el Nombre de tu Azure Container Registry (ACR)
+  ACR_USERNAME: 'contenedorsumativa3'  # Se debe colocar el Nombre de usuario del ACR
+  ACR_PASSWORD: '6aqoiDwwpx8ZUsgXXvsepV2Qzcn66oR7aoqcmWNXIC+ACRBJGjtg'  # Se debe colocar la Contraseña del ACR
 
 stages:
   - stage: Deploy
@@ -16,7 +16,7 @@ stages:
       - deployment: DeployToVM
         displayName: 'Deploy MySQL to VM'
         environment:
-          name: 'VMLinuxDocker'  # Nombre del entorno configurado en Azure DevOps
+          name: 'sumativa3enterno'  # Nombre del entorno configurado en Azure DevOps
           resourceType: VirtualMachine  # Especifica que se conecta a una máquina virtual
         strategy:
           runOnce:
