--- a/azure-pipeline-push-imageBD-acr.yml
+++ b/azure-pipeline-push-imageBD-acr.yml
@@ -7,7 +7,7 @@ variables:
   # Variables de entorno
   ACR_NAME: 'contenedorsumativa3' # Colocar el nombre de tu ACR
   IMAGE_NAME: 'myBDMySql' # Colocar el Nombre de Imagen
-  SERVICE_CONNECTION_NAME: 'conecctionsumativa3' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
+  SERVICE_CONNECTION_NAME: 'dockersumativa3' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
 
 jobs:
   - job: BuildAndPush
